--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shaped.js",
   "version": "2.0.0",
   "description": "Generate cool moving shapes using a canvas element",
-  "repository": "https://github.com/moritzruth/shaped.js.git",
+  "repository": "https://github.com/moritzruth-archive/shaped.js.git",
   "author": "Moritz Ruth <dev@moritzruth.de>",
   "license": "Apache-2.0",
   "scripts": {
@@ -26,17 +26,17 @@
     ]
   },
   "devDependencies": {
-    "@pika/pack": "^0.5.0",
+    "@pika/pack": "0.5.0",
     "@pika/plugin-build-web": "^0.9.2",
     "@pika/plugin-bundle-web": "^0.9.2",
-    "@pika/plugin-ts-standard-pkg": "^0.9.2",
-    "@types/lodash.throttle": "^4.1.6",
-    "eslint": "^7.6.0",
-    "eslint-config-awzzm-ts": "^1.0.1",
-    "typescript": "^4.0.2"
+    "@pika/plugin-ts-standard-pkg": "0.9.2",
+    "@types/lodash.throttle": "4.1.6",
+    "eslint": "7.20.0",
+    "eslint-config-awzzm-ts": "1.5.2",
+    "typescript": "4.1.5"
   },
   "dependencies": {
-    "lodash.throttle": "^4.1.1",
-    "random-item": "^3.0.0"
+    "lodash.throttle": "4.1.1",
+    "random-item": "^3.1.0"
   }
 }
